Coming soon website, first pass - very early alpha

--- a/template.html
+++ b/template.html
@@ -25,33 +25,18 @@
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-TileImage" content="img/favicons//favicon-144.png">
 	<meta name="msapplication-config" content="img/favicons//browserconfig.xml">
+
     <link rel="stylesheet" href="css/main.css">
+	<script src="js/main.js"></script>
     <title>Argil.Dev</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-<div class="name">
-	<a href="http://argil.dev"> Argil.Dev </a>
-</div>
-
-<center>
-<div class="container">
-	<div class="subtitle" id="subtitle">
-		
-		<h1>Resident Technology Bas<span class="blur">tar</span>d</h1>
-
-	</div>
-</div>
-</center>
-<div class="container">
-<div class="vertical-center">
-	<h2>[COMING SOON]</h2>
-</div>
-</div>
+<h1>
+    Argil.Dev
+</h1>
 
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="js/main.js"></script>
 
 </body> 
 </html>
