Small updates, just making sure stuff works

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="container">
 	<div class="subtitle" id="subtitle">
 		
-		<h1>Resident Technology Bas<span class="blur">tar</span>d</h1>
+		<h1>Starting up . . .   </h1>
 
 	</div>
 </div>
